fix navigation buttons in carousels. Fix sport button in quiz on mobile devices. Auto translate is work. Some corrections

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,10 @@ $form-width: 1200px;
   overflow-x: hidden;
 }
 
+:global(html){
+  overflow-x: hidden;
+}
+
 input[type="date"]{
   -webkit-appearance: none;
 }
